Supporting TAV-342. Changed to Junit4 style. Added test didntMakeLocalJarFile() (for testing file:// repositories, as in TAV-342), and updated madeLocalJarFile() to test for existance of downloaded .jar file in repository. didntM* tests that the file was NOT created when using a file:// source
git-svn-id: http://taverna.googlecode.com/svn@2618 bf327186-88b3-11dd-a302-d386e5130c1c